fix: spacing of certifications section

--- a/styles.css
+++ b/styles.css
@@ -393,7 +393,7 @@ a {
 	height: 100%;
 	display: flex;
 	flex-direction: row;
-	gap: 10px;
+	gap: 55px;
 	align-items: center;
 	justify-content: flex-start;
 	margin-top: 20px;
